Go BYOSnap: Post RC48 fix
