# basic/byosnap-go/snapser-resources/swagger2x.json
@@ -24,20 +24,13 @@
       "delete": {
         "description": "This API will work only when the call is coming from within the Snapend.",
         "summary": "User APIs",
-        "operationId": "Delete User",
+        "operationId": "DeleteUser",
         "parameters": [
           {
             "type": "string",
             "description": "Unique identifier of the user",
             "name": "user_id",
             "in": "path",
-            "required": true
-          },
-          {
-            "type": "string",
-            "description": "User Session Token",
-            "name": "Token",
-            "in": "header",
             "required": true
           }
         ],
@@ -64,20 +57,13 @@
       "get": {
         "description": "This API will work with User and Api-Key auth. With a valid user token and api-key, you can access this API.",
         "summary": "Game APIs",
-        "operationId": "Get Game",
+        "operationId": "GetGame",
         "parameters": [
           {
             "type": "string",
             "description": "Unique identifier of the user",
             "name": "user_id",
             "in": "path",
-            "required": true
-          },
-          {
-            "type": "string",
-            "description": "User Session Token",
-            "name": "Token",
-            "in": "header",
             "required": true
           }
         ],
@@ -104,20 +90,13 @@
       "post": {
         "description": "This API will work only with Api-Key auth. You can access this API with a valid api-key.",
         "summary": "Game APIs",
-        "operationId": "Save Game",
+        "operationId": "SaveGame",
         "parameters": [
           {
             "type": "string",
             "description": "Unique identifier of the user",
             "name": "user_id",
             "in": "path",
-            "required": true
-          },
-          {
-            "type": "string",
-            "description": "User Session Token",
-            "name": "Token",
-            "in": "header",
             "required": true
           }
         ],
@@ -145,20 +124,13 @@
       "put": {
         "description": "This API will work only when the call is coming from within the Snapend.",
         "summary": "User APIs",
-        "operationId": "Update User Profile",
+        "operationId": "UpdateUserProfile",
         "parameters": [
           {
             "type": "string",
             "description": "Unique identifier of the user",
             "name": "user_id",
             "in": "path",
-            "required": true
-          },
-          {
-            "type": "string",
-            "description": "User Session Token",
-            "name": "Token",
-            "in": "header",
             "required": true
           }
         ],
@@ -217,15 +189,6 @@
         "path_user_id": {
           "type": "string",
           "x-go-name": "PathUserID"
-        }
-      },
-      "x-go-package": "byosnap-go"
-    },
-    "TokenHeaderSchema": {
-      "type": "object",
-      "properties": {
-        "Token": {
-          "type": "string"
         }
       },
       "x-go-package": "byosnap-go"
